@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Added support for changing the FLAG_ANIMATED from cfpython.
+    plugins/cfpython/cfpython_object.c
+    plugins/cfpython/include/cfpython_object_private.h
+Yann Chachkoff (gros) 2007-11-18
+
 Misc fixes, no functional change.
  common/languages.c: convert to UTF-8, fix comment, add missing new line at end.
  doc/Developers/object.dox: fix references.
